@@ -178,6 +178,7 @@ public class GridCoordSys extends CoordinateSystem implements ucar.nc2.dt.GridCo
     if (z != null)
       testAxis.add(z);
 
+    /*
     CoordinateAxis t = cs.getTaxis();
     if ((t != null) && !(t instanceof CoordinateAxis1D) && (t.getRank() != 0)) {
       CoordinateAxis rt = cs.findAxis(AxisType.RunTime);
@@ -212,6 +213,51 @@ public class GridCoordSys extends CoordinateSystem implements ucar.nc2.dt.GridCo
     }
     if (t != null)
       testAxis.add(t);
+    */
+
+    // tom margolis 3/2/2010
+    // allow runtime independent of time
+    CoordinateAxis t = cs.getTaxis();
+    CoordinateAxis rt = cs.findAxis(AxisType.RunTime);
+
+    // A runtime axis must be one-dimensional
+    if (rt != null && !(rt instanceof CoordinateAxis1D)) {
+      if (sbuff != null) {
+        sbuff.format("%s: RunTime axis must be 1D%n", cs.getName());
+      }
+      return false;
+    }
+
+    // If time axis is two-dimensional...
+    if ((t != null) && !(t instanceof CoordinateAxis1D) && (t.getRank() != 0)) {
+      // ... a runtime axis is required
+      if (rt == null) {
+        if (sbuff != null) sbuff.format("%s: T axis must be 1D%n", cs.getName());
+        return false;
+      }
+
+      if (t.getRank() != 2) {
+        if (sbuff != null) {
+          sbuff.format("%s: Time axis must be 2D when used with RunTime dimension%n", cs.getName());
+        }
+        return false;
+      }
+
+      CoordinateAxis1D rt1D = (CoordinateAxis1D) rt;
+      if (!rt1D.getDimension(0).equals(t.getDimension(0))) {
+        if (sbuff != null) {
+          sbuff.format("%s: Time axis must use RunTime dimension%n", cs.getName());
+        }
+        return false;
+      }
+    }
+
+    // Set the primary temporal axis - either Time or Runtime
+    if (t != null) {
+      testAxis.add(t);
+    } else if (rt != null) {
+      testAxis.add(rt);
+    }
 
     CoordinateAxis ens = cs.getEnsembleAxis();
     if (ens != null)
