@@ -18,14 +18,6 @@
       <maximumStackSize value="32" />
       <properties />
     </buildFile>
-    <buildFile url="file://$PROJECT_DIR$/../../../unidataCommon/build.xml">
-      <additionalClassPath />
-      <antReference projectDefault="true" />
-      <customJdkName value="" />
-      <maximumHeapSize value="128" />
-      <maximumStackSize value="32" />
-      <properties />
-    </buildFile>
   </component>
   <component name="ArtifactManager">
     <artifact type="exploded-war" name="opendap:opendap exploded">
@@ -685,60 +677,6 @@
   <component name="SvnBranchConfigurationManager">
     <option name="myConfigurationMap">
       <map>
-        <entry key="$PROJECT_DIR$/../../../Java-OPeNDAP">
-          <value>
-            <SvnBranchConfiguration>
-              <option name="branchMap">
-                <map>
-                  <entry key="http://scm.opendap.org/svn/branch">
-                    <value>
-                      <list />
-                    </value>
-                  </entry>
-                  <entry key="http://scm.opendap.org/svn/tags">
-                    <value>
-                      <list />
-                    </value>
-                  </entry>
-                </map>
-              </option>
-              <option name="branchUrls">
-                <list>
-                  <option value="http://scm.opendap.org/svn/branch" />
-                  <option value="http://scm.opendap.org/svn/tags" />
-                </list>
-              </option>
-              <option name="trunkUrl" value="http://scm.opendap.org/svn/trunk" />
-            </SvnBranchConfiguration>
-          </value>
-        </entry>
-        <entry key="$PROJECT_DIR$/../../../grib">
-          <value>
-            <SvnBranchConfiguration>
-              <option name="branchMap">
-                <map>
-                  <entry key="svn://zero/grib/branch">
-                    <value>
-                      <list />
-                    </value>
-                  </entry>
-                  <entry key="svn://zero/grib/tag">
-                    <value>
-                      <list />
-                    </value>
-                  </entry>
-                </map>
-              </option>
-              <option name="branchUrls">
-                <list>
-                  <option value="svn://zero/grib/branch" />
-                  <option value="svn://zero/grib/tag" />
-                </list>
-              </option>
-              <option name="trunkUrl" value="svn://zero/grib/trunk" />
-            </SvnBranchConfiguration>
-          </value>
-        </entry>
         <entry key="$PROJECT_DIR$/../../bufrTables">
           <value>
             <SvnBranchConfiguration>
@@ -1006,33 +944,6 @@
                 </list>
               </option>
               <option name="trunkUrl" value="svn://zero/thredds/trunk" />
-            </SvnBranchConfiguration>
-          </value>
-        </entry>
-        <entry key="$PROJECT_DIR$/../../../unidataCommon">
-          <value>
-            <SvnBranchConfiguration>
-              <option name="branchMap">
-                <map>
-                  <entry key="svn://zero/common/java/branch">
-                    <value>
-                      <list />
-                    </value>
-                  </entry>
-                  <entry key="svn://zero/common/java/tag">
-                    <value>
-                      <list />
-                    </value>
-                  </entry>
-                </map>
-              </option>
-              <option name="branchUrls">
-                <list>
-                  <option value="svn://zero/common/java/branch" />
-                  <option value="svn://zero/common/java/tag" />
-                </list>
-              </option>
-              <option name="trunkUrl" value="svn://zero/common/java/trunk" />
             </SvnBranchConfiguration>
           </value>
         </entry>
